--- a/STPPdataExplor.rmd
+++ b/STPPdataExplor.rmd
@@ -9,6 +9,12 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+NOTE: Github doesn't currently render the latex equations typed in 'rmarkdown' document. Therefore, in order to preview this document (with equations properly rendered), follow the below steps:
+
+1. Click on the 'DataExplorInR' directory
+2. Click on the 'STPPdataExplor.html' file, and copy the GitHub URL
+3. Use this tool to preview it: http://htmlpreview.github.io/  (credit to:Jennifer Bryan)
+
 ###Exercises
 
 * Definitions
